--- a/arch/arm/configs/nAa_shakira_defconfig
+++ b/arch/arm/configs/nAa_shakira_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.32.60-nAa-06
-# Mon May 27 00:36:59 2013
+# Linux kernel version: 2.6.32.61-XPerience-KK01
+# Fri Mar 28 21:23:42 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -39,8 +39,8 @@ CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_BZIP2 is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_LZO is not set
-CONFIG_KERNEL_LZ4=y
+CONFIG_KERNEL_LZO=y
+# CONFIG_KERNEL_LZ4 is not set
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
@@ -117,7 +117,7 @@ CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 # CONFIG_MODVERSIONS is not set
@@ -138,13 +138,13 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_AS is not set
-CONFIG_DEFAULT_DEADLINE=y
-# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_VR is not set
-CONFIG_DEFAULT_IOSCHED="deadline"
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_FREEZER=y
 
 #
@@ -441,7 +441,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_GOV_SMARTASS is not set
-# CONFIG_CPU_FREQ_GOV_SCARY is not set
+CONFIG_CPU_FREQ_GOV_SCARY=y
 # CONFIG_CPU_FREQ_GOV_BRAZILIANWAX is not set
 # CONFIG_CPU_FREQ_GOV_MINMAX is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVEX is not set
@@ -449,7 +449,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
 # CONFIG_CPU_FREQ_GOV_SMOOTHASS is not set
-# CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 # CONFIG_CPU_FREQ_GOV_VIRTUOUS is not set
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
@@ -465,7 +465,7 @@ CONFIG_CPU_FREQ_MSM=y
 # At least one emulation must be selected
 #
 # CONFIG_FPE_NWFPE is not set
-# CONFIG_FPE_FASTFPE is not set
+CONFIG_FPE_FASTFPE=y
 CONFIG_VFP=y
 
 #
