--- a/arch/arm/configs/xpe_shakira_defconfig
+++ b/arch/arm/configs/xpe_shakira_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.62-XPerience-02
-# Wed Apr  2 13:10:23 2014
+# Wed Apr  2 16:22:00 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1827,6 +1827,7 @@ CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_DO_NOT_KILL_PROCESS=y
 # CONFIG_MSM_RPCSERVERS is not set
 
 #
