CMA: mm: cma: Contiguous Memory Allocator added

--- a/arch/arm/configs/xpe_shakira_defconfig
+++ b/arch/arm/configs/xpe_shakira_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.32.62-XPerience-03
-# Thu Apr  3 19:22:23 2014
+# Linux kernel version: 2.6.32.62-XPerience-04
+# Fri Apr  4 15:38:03 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -390,6 +390,10 @@ CONFIG_HAVE_MLOCK=y
 CONFIG_HAVE_MLOCKED_PAGE_BIT=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
+CONFIG_ARCH_CMA_POSSIBLE=y
+CONFIG_CMA=y
+CONFIG_CMA_DEBUG=y
+CONFIG_CMA_BEST_FIT=y
 CONFIG_CLEANCACHE=y
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
@@ -1033,6 +1037,7 @@ CONFIG_SEMC_POWER_BQ24180=y
 CONFIG_SEMC_GPIO_MATRIX_DRIVER=y
 # CONFIG_SEMC_GPIO_INPUT_DRIVER is not set
 # CONFIG_SEMC_GPIO_EXTR is not set
+CONFIG_CMA_DEVICE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
